[gd_scene load_steps=5 format=3 uid="uid://fgfie74mjqjs"]

[ext_resource type="Script" path="res://scenes/interfaces/battle_manager/battle_manager.gd" id="1_xnjbi"]
[ext_resource type="Texture2D" uid="uid://bov1hs5fvyh28" path="res://assets/art/characters/team_heroes_portraits/eddy_circle_portrait.png" id="2_dgssy"]
[ext_resource type="PackedScene" uid="uid://cjyqwudsqgmsu" path="res://scenes/interfaces/home/log_entry.tscn" id="2_r54ea"]
[ext_resource type="PackedScene" uid="uid://dfgru6ciat4rq" path="res://battlesim/utility/stage_manager/stage_manager.tscn" id="4_ehwv0"]

[node name="BattleManager" type="PanelContainer" groups=["update_post_match"]]
custom_minimum_size = Vector2(400, 0)
offset_left = 1520.0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 10
mouse_filter = 2
theme_type_variation = &"InvisPanel"
script = ExtResource("1_xnjbi")
log_scene = ExtResource("2_r54ea")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VB" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="BattleManagerLabel" type="Label" parent="MarginContainer/VB"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"HeaderLarge"
text = "Battle Manager"
horizontal_alignment = 1

[node name="HeroesHB" type="HBoxContainer" parent="MarginContainer/VB"]
layout_mode = 2

[node name="TopHeroButton" type="Button" parent="MarginContainer/VB/HeroesHB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
icon = ExtResource("2_dgssy")
flat = true
icon_alignment = 1
expand_icon = true

[node name="BotHeroButton" type="Button" parent="MarginContainer/VB/HeroesHB"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
icon = ExtResource("2_dgssy")
flat = true
icon_alignment = 1
expand_icon = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VB"]
layout_mode = 2

[node name="ManualControlLabel" type="Label" parent="MarginContainer/VB"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Manual controls:"
horizontal_alignment = 1

[node name="LeaveManualButton" type="Button" parent="MarginContainer/VB"]
layout_mode = 2
text = "Leave manual state now"

[node name="ManualControlHB" type="HBoxContainer" parent="MarginContainer/VB"]
layout_mode = 2

[node name="WaitTimeSlider" type="HSlider" parent="MarginContainer/VB/ManualControlHB"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
max_value = 5.0
value = 2.0

[node name="WaitTimeLabel" type="Label" parent="MarginContainer/VB/ManualControlHB"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "2 seconds"

[node name="WaitTimeHintLabel" type="Label" parent="MarginContainer/VB/ManualControlHB"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Time until hero goes back to normal after a command finishes."
mouse_filter = 0
theme_type_variation = &"TooltipLabel"
theme_override_font_sizes/font_size = 10
text = "(?)"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VB"]
layout_mode = 2

[node name="ManualControlLabel2" type="Label" parent="MarginContainer/VB"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Team controls:"
horizontal_alignment = 1

[node name="LaneHB" type="HBoxContainer" parent="MarginContainer/VB"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopButton" type="Button" parent="MarginContainer/VB/LaneHB"]
layout_mode = 2
size_flags_horizontal = 3
text = "Top lane"

[node name="BotButton" type="Button" parent="MarginContainer/VB/LaneHB"]
layout_mode = 2
size_flags_horizontal = 3
text = "bot lane"

[node name="RetreatButton" type="Button" parent="MarginContainer/VB"]
layout_mode = 2
text = "Retreat to Nexus"

[node name="EndBattleButton" type="Button" parent="MarginContainer/VB"]
visible = false
layout_mode = 2
size_flags_vertical = 10
text = "End battle"
flat = true

[node name="FastForwardButton" type="Button" parent="MarginContainer/VB"]
visible = false
layout_mode = 2
size_flags_vertical = 8
text = "Speed up X4"
flat = true

[node name="Control" type="Control" parent="MarginContainer/VB"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 10

[node name="StageManager" parent="MarginContainer/VB/Control" groups=["stage_manager"] instance=ExtResource("4_ehwv0")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 4

[node name="BattleLogVB" type="VBoxContainer" parent="MarginContainer/VB"]
layout_mode = 2

[node name="BattleLogLabel" type="Label" parent="MarginContainer/VB/BattleLogVB"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Battle Log"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VB/BattleLogVB"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="BattleLogEntries" type="VBoxContainer" parent="MarginContainer/VB/BattleLogVB/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/VB/HeroesHB/TopHeroButton" to="." method="_on_top_hero_button_pressed"]
[connection signal="pressed" from="MarginContainer/VB/HeroesHB/BotHeroButton" to="." method="_on_bot_hero_button_pressed"]
[connection signal="pressed" from="MarginContainer/VB/LeaveManualButton" to="." method="_on_leave_manual_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VB/ManualControlHB/WaitTimeSlider" to="." method="_on_wait_time_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VB/LaneHB/TopButton" to="." method="_on_top_button_pressed"]
[connection signal="pressed" from="MarginContainer/VB/LaneHB/BotButton" to="." method="_on_bot_button_pressed"]
[connection signal="pressed" from="MarginContainer/VB/RetreatButton" to="." method="_on_retreat_button_pressed"]
[connection signal="pressed" from="MarginContainer/VB/EndBattleButton" to="." method="_on_end_battle_button_pressed"]
[connection signal="pressed" from="MarginContainer/VB/FastForwardButton" to="." method="_on_fast_forward_button_pressed"]
